finish custom validation