@@ -6,9 +6,6 @@ import lombok.experimental.FieldDefaults;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
-import org.springframework.validation.ObjectError;
-import org.springframework.web.ErrorResponse;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
@@ -26,15 +23,15 @@ public class CommonAdvice extends ResponseEntityExceptionHandler {
 
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
-        var errors = ex.getBindingResult()
+        List<ErrorResponse> errors = ex.getBindingResult()
                 .getFieldErrors().stream().map(fieldError ->
-                        new InvalidResponse(VALIDATION_ERROR, fieldError.getField(), fieldError.getDefaultMessage())).
-                collect(Collectors.toCollection(ArrayList::new));
+                        new ErrorResponse(VALIDATION_ERROR, fieldError.getField(), fieldError.getDefaultMessage())).
+                toList();
 
-        List<InvalidResponse> result = ex.getBindingResult().
+        List<ErrorResponse> result = ex.getBindingResult().
                 getGlobalErrors().
-                stream().map(e -> new InvalidResponse(VALIDATION_ERROR, e.getDefaultMessage()))
-                .collect(Collectors.toList());
+                stream().map(e -> new ErrorResponse(VALIDATION_ERROR, e.getDefaultMessage()))
+                .toList();
 
         errors.addAll(result);
         return ResponseEntity.badRequest()
